# lightweightvk

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  deploy_content_android.py
.github/workflows/: c-cpp.yml
android/: build.gradle  settings.gradle.in
android/app/: AndroidManifest.xml.in  MainActivity.java.in  build.gradle.in
android/gradle/wrapper/: gradle-wrapper.properties
lvk/: CMakeLists.txt  HelpersImGui.cpp  HelpersImGui.h  LVK.cpp  LVK.h  Pool.h
lvk/vulkan/: CMakeLists.txt  VulkanClasses.cpp  VulkanClasses.h  VulkanUtils.cpp  VulkanUtils.h
samples/: 001_HelloTriangle.cpp  001_HelloTriangle_Slang.cpp  002_RenderToCubeMap.cpp  003_RenderToCubeMapSinglePass.cpp  004_YUV.cpp  005_MeshShaders.cpp  006_RayTracingHello.cpp  006_SwapchainHDR.cpp  007_RayTracingAO.cpp  008_RayTracingMesh.cpp  009_TriplanarMapping.cpp  Bistro.h  CMakeLists.txt  DEMO_001_SolarSystem.cpp  README.md  RTX_002_AO.cpp  RTX_003_Pipeline.cpp  RTX_004_Textures.cpp  Tiny.cpp  Tiny_Mesh.cpp  Tiny_MeshLarge.cpp  VulkanApp.cpp  VulkanApp.h
